--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "dependencies": {
     "@formspree/react": "^2.5.1",
     "@vercel/analytics": "^1.4.1",
+    "disqus-react": "^1.1.5",
+    "md5": "^2.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.1.1"
+    "react-router-dom": "^7.1.1",
+    "react-safe": "^1.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
